More PEP8 changes

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@ log.txt
 .idea/XLeague.iml
 .idea/dictionaries/David.xml
 .idea/vcs.xml
+.idea/inspectionProfiles/Project_Default.xml
+.idea/inspectionProfiles/profiles_settings.xml
